<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sorting_key">sorting</string>
    <string name="pref_sorting_title">Sorting</string>
    <string name="pop_desc">popularity.desc</string>
    <string name="rate_desc">vote_average.desc</string>
    <string name="popularity">Popularity</string>
    <string name="rating">Rating</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="rating_label">Rating</string>
    <string name="year_label">Year</string>
    <string name="plot_label">Plot</string>
    <string name="could_not_find_poster_image">Poster of Movie</string>
    <string name="movie_title_label">Title</string>
    <string name="favorite">Favorite</string>
    <string name="share_title">Share</string>
    <string name="title_movie_list">Movies</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="share_label">Share</string>
</resources>
