<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.popularmovies.app.DetailActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_title_label"
        android:id="@+id/movie_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:longClickable="false"
        android:paddingTop="42dp"
        android:paddingBottom="42dp"
        android:background="#2196F3"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/movie_info_layout"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/poster"
            android:src="@android:mipmap/sym_def_app_icon"
            android:contentDescription="@string/could_not_find_poster_image"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textData"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"

            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_label"
                android:id="@+id/movie_year"
                android:textSize="25sp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_label"
                android:id="@+id/rating"
                android:layout_marginBottom="7dp"
                android:textSize="20sp"

                android:layout_gravity="center_horizontal" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/star"
                android:src="@drawable/abc_btn_rating_star_off_mtrl_alpha"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/favorite" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/plot_label"
        android:id="@+id/plot"
        android:layout_below="@+id/movie_info_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="12dp"/>


</RelativeLayout>