<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/movie_detail_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        tools:context="com.example.android.popularmovies.app.DetailActivity">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="#2196F3"
            android:gravity="center_horizontal"
            android:longClickable="false"
            android:paddingBottom="42dp"
            android:paddingTop="42dp"
            android:text="@string/movie_title_label"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/movie_info_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/movie_title"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/could_not_find_poster_image"
                android:src="@android:mipmap/sym_def_app_icon" />

            <LinearLayout
                android:id="@+id/textData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="42dp"
                android:layout_marginStart="42dp"

                android:orientation="vertical">
                <TextView
                    android:id="@+id/movie_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="12dp"
                    android:text="@string/year_label"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="7dp"
                    android:text="@string/rating_label"

                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:button="@android:drawable/btn_star_big_off"
                    android:contentDescription="@string/favorite" />

            </LinearLayout>


        </LinearLayout>
        <TextView
            android:id="@+id/plot_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_info_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/plot_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/plot_label"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="Plot Example"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/trailer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/plot"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/trailers_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <ListView
            android:id="@+id/listview_trailers"
            android:layout_below="@id/trailer_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#c0c0c0" />
        <TextView
            android:id="@+id/reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/listview_trailers"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/reviews_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <ListView
            android:id="@+id/listview_reviews"
            android:layout_below="@id/reviews_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#c0c0c0" />




    </RelativeLayout>
</ScrollView>